--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -62,6 +62,9 @@
          >
   <ng-template pTemplate="header">
     <tr>
+      <th pSortableColumn="updated" class="updated-col center" pTooltip="Last Updated">
+        <p-sortIcon field="updated" class="updated-col-sort"/>
+      </th>
       <th pSortableColumn="name" class="name-col">
         <span class="pi pi-refresh header-refresh" (click)="things.getAllThings()" pTooltip="Refresh" *ngIf="useDial">&nbsp;</span>
         {{ getNameColumnHeader() }} <p-sortIcon field="name" />
@@ -73,27 +76,18 @@
         <p-sortIcon field="fields" />
       </th>
       <th class="control-col">
-        {{ rowSelectedCount() }} Sel<span class="hide-on-mobile">ected Rows</span>
-        <span class="pi pi-ban header-tiny-button header-tiny-button-color header-clear-rows-button" (click)="clearSelectedRows()" pTooltip="Clear Selections" tooltipPosition="left" *ngIf="hasSelectedRows()"></span>
+        <span (click)="clearSelectedRows()">
+          {{ rowSelectedCount() }} Sel<span class="hide-on-mobile">ected Rows</span>
+          <span class="pi pi-ban header-tiny-button header-tiny-button-color header-clear-rows-button" pTooltip="Clear Selections" tooltipPosition="left" *ngIf="hasSelectedRows()"></span>
+        </span>
         &nbsp;
         <span class="pi pi-filter header-tiny-button header-tiny-button-color" (click)="toggleShowFilters()" pTooltip="Show Filters" *ngIf="!showFilters"></span>
         <span class="pi pi-filter-slash header-tiny-button header-tiny-button-color" (click)="toggleShowFilters()" pTooltip="Hide Filters" *ngIf="showFilters"></span>
       </th>
-      <!-- TODO Need to repeat ourselves here, which isn't great, to be able to have a dynamic rowspan. Can't use [rowspan] or {{}}-->
-      <ng-container *ngIf="showFilters">
-        <th rowspan="2" pSortableColumn="updated" class="updated-col center" pTooltip="Last Updated">
-          Last<br/>Updated<br/><p-sortIcon field="updated" />
-        </th>
-      </ng-container>
-      <ng-container *ngIf="!showFilters">
-        <th pSortableColumn="updated" class="updated-col center" pTooltip="Last Updated">
-          <p-sortIcon field="updated" />
-        </th>
-      </ng-container>
     </tr>
     <ng-container *ngIf="showFilters">
       <tr>
-        <th><p-columnFilter type="text" field="name" matchMode="contains" /></th>
+        <th colspan="2"><p-columnFilter type="text" field="name" matchMode="contains" /></th>
         <th><p-columnFilter type="text" field="templateType" matchMode="contains" /></th>
         <!-- TODO Could add a custom filter option of "Reminder=true/false" for the time column. Then can remove 'reminder' from supported global search fields on the table -->
         <th><p-columnFilter type="date" field="time" appendTo="body" /></th>
@@ -105,6 +99,9 @@
   </ng-template>
   <ng-template pTemplate="body" let-data let-rowIndex="rowIndex">
     <tr [pSelectableRow]="data" [pSelectableRowIndex]="rowIndex">
+      <td class="updated-col-cell" pTooltip="{{data.updated | date: 'medium'}}">
+        {{ data.getUpdated() }}
+      </td>
       <td>
         <span [style]="'color:' + data.color">
           <span *ngIf="isFavoriteByName(data.name)" class="pi pi-heart-fill" style="font-size: 0.75rem"></span>
@@ -121,9 +118,6 @@
       </td>
       <td colspan="2">
         {{ data.getFieldsAsString() }}
-      </td>
-      <td class="updated-col-cell" pTooltip="{{data.updated | date: 'medium'}}">
-        {{ data.getUpdated() }}
       </td>
     </tr>
   </ng-template>
