--- a/src/app/manage-template-dialog/manage-template-dialog.component.html
+++ b/src/app/manage-template-dialog/manage-template-dialog.component.html
@@ -50,7 +50,7 @@
           </tr>
           <tr>
             <td colspan="5">
-              <p-checkbox [(ngModel)]="actOn.initialReminder" [binary]="true" label="Set initially as a Reminder?" pTooltip="If checked, any Thing created from this template will default to being a reminder"/>
+              <p-checkbox [(ngModel)]="actOn.initialReminder" [binary]="true" label="Set initially as a Reminder?" pTooltip="If checked, any Thing created from this Template will default to being a reminder"/>
             </td>
           </tr>
           <tr *ngIf="actOn.hasFields()">
@@ -106,7 +106,7 @@
     <ng-container *ngIf="operation === 'favorite'">
       <div class="favorite-wrap">
         <div class="section">
-          You can have one favorite template at a time, which will pin to the menu<br/>and have some convenience options to make it one-click to submit a Thing.
+          You can have one Favorite Template at a time, which will pin to the menu<br/>and have some convenience options to make it one-click to submit a Thing.
         </div>
         <div class="section">
           <label>Template to Favorite:&nbsp;</label>
