--- a/src/app/reminder-message/reminder-message.component.css
+++ b/src/app/reminder-message/reminder-message.component.css
@@ -9,6 +9,6 @@
 
 @media (max-width: 850px) {  /* var(--mobile-breakpoint) equivalent, just can't use in media queries */
   .p-message {
-    width: 100%;
+    width: calc(100% - 10px); /* Calculate for margin/padding */
   }
 }
