--- a/src/app/template-dropdown/template-dropdown.component.html
+++ b/src/app/template-dropdown/template-dropdown.component.html
@@ -1,4 +1,4 @@
-<p-dropdown [options]="templateService.filteredData(hideDefaults)"
+<p-dropdown [options]="filteredData"
             optionLabel="name"
             appendTo="body"
             [(ngModel)]="selectedTemplate"
