--- a/src/app/global-search-dialog/global-search-dialog.component.html
+++ b/src/app/global-search-dialog/global-search-dialog.component.html
@@ -1,5 +1,5 @@
 <p-dialog header="Global Search" [(visible)]="isShowing" [modal]="false" class="global-search-dialog"
-          (onShow)="handleFocus(searchField)">
+          (onShow)="handleFocus(searchField)" (onHide)="resetOnHide()">
   <div *ngIf="isShowing && resultCount" class="center result-text">{{resultCount}} records</div>
   <input id="search" #searchField pInputText [(ngModel)]="searchText" (keyup.enter)="performSearch()" placeholder="Enter your keywords"/>
   <ng-template pTemplate="footer">
