--- a/src/app/global-search-dialog/global-search-dialog.component.html
+++ b/src/app/global-search-dialog/global-search-dialog.component.html
@@ -1,6 +1,8 @@
 <p-dialog header="Global Search" [(visible)]="isShowing" [modal]="false" class="global-search-dialog"
           (onShow)="handleFocus(searchField)" (onHide)="resetOnHide()">
-  <div *ngIf="isShowing && resultCount" class="center result-text">{{resultCount}} records</div>
+  <ng-container *ngIf="isShowing">
+    <div *ngIf="resultCount !== null" class="center result-text">{{resultCount}} records</div>
+  </ng-container>
   <input id="search" #searchField pInputText [(ngModel)]="searchText" (keyup.enter)="performSearch()" placeholder="Enter your keywords"/>
   <ng-template pTemplate="footer">
     <p-button (onClick)="performReset()" label="Reset" icon="pi pi-delete-left" iconPos="left" severity="secondary"/>
