--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,54 +2,68 @@
 
 <p-progressBar [mode]="things.loading ? 'indeterminate' : 'determinate'" class="loading-bar" />
 
-<ng-container *ngIf="useDial">
+@if (useDial) {
   <div id="ddOverlay" [draggable]="true" (dragstart)="dialDragStart($event)" (dragend)="dialDragEnd($event)"
        class="menu-dial menu-dial-overlay"
        (click)="dialOverlayClickthru($event)"></div>
-  <div id="ddBadge" class="menu-dial-badge"
-       *ngIf="things.getReminderBadgeCount() > 0"
-       [style.top]="getDialBadgeTop()"
-       [style.left]="getDialBadgeLeft()">{{things.getReminderBadgeCount()}}</div>
+  @if (things.getReminderBadgeCount() > 0) {
+    <div id="ddBadge" class="menu-dial-badge"
+        [style.top]="getDialBadgeTop()"
+        [style.left]="getDialBadgeLeft()">{{things.getReminderBadgeCount()}}</div>
+  }
   <p-speedDial #speedDial id="speedDial" [model]="getDialItems()" direction="down" type="linear" class="menu-dial"
                 (onHide)="isDialOpen = false" (onShow)="isDialOpen = true">
   </p-speedDial>
-</ng-container>
-
-<ng-container *ngIf="!useDial">
-<div class="fixed-toolbar">
-  <div class="toolbar-content">
-    <div class="toolbar-left">
-      <p-button (onClick)="things.getAllThings()" icon="pi pi-refresh" [loading]="things.loading" severity="info" />
-      <p-button (onClick)="quickfillFavoriteThing()" icon="pi pi-heart" severity="help" *ngIf="templateService.hasFavorite()" />
-      <p-button (onClick)="clearSelectedRows(); manageTemplate.show()" icon="pi pi-list" [label]="getManageTemplateLabel()" />
-      <p-button (onClick)="clearSelectedRows(); manageThing.showAdd()" icon="pi pi-plus-circle" label="New Thing" />
-      <p-button (onClick)="requestEditSelected()" icon="pi pi-pencil" label="Edit Thing" [disabled]="!hasOneSelectedRow()" />
-      <p-button (onClick)="confirmDeleteSelected($event)" icon="pi pi-trash" severity="danger" [label]="getDeleteLabel()" [disabled]="!hasSelectedRows()" />
-    </div>
-    <div class="toolbar-right">
-      <p-splitButton (onClick)="toggleShowReminders()"
-                     icon="pi pi-clock" [model]="getRemindersForSplitButton()"
-                     [label]="getReminderLabel()"
-                     *ngIf="things.hasAnyReminders()"
-                     class="reminder-button" styleClass="p-button-secondary p-button-sm"/>
-      <span class="p-input-icon-left" *ngIf="!things.loading">
-        <i class="pi pi-search"></i>
-        <input pInputText type="text" (input)="globalFilterTableByEvent($event)" placeholder="Search Things" />
-      </span>
-      <p-progressSpinner *ngIf="things.loading" />
+}
+@else {
+  <div class="fixed-toolbar">
+    <div class="toolbar-content">
+      <div class="toolbar-left">
+        <p-button (onClick)="things.getAllThings()" icon="pi pi-refresh" [loading]="things.loading" severity="info" />
+        @if (templateService.hasFavorite()) {
+          <p-button (onClick)="quickfillFavoriteThing()" icon="pi pi-heart" severity="help" />
+        }
+        <p-button (onClick)="clearSelectedRows(); manageTemplate.show()" icon="pi pi-list" [label]="getManageTemplateLabel()" />
+        <p-button (onClick)="clearSelectedRows(); manageThing.showAdd()" icon="pi pi-plus-circle" label="New Thing" />
+        <p-button (onClick)="requestEditSelected()" icon="pi pi-pencil" label="Edit Thing" [disabled]="!hasOneSelectedRow()" />
+        <p-button (onClick)="confirmDeleteSelected($event)" icon="pi pi-trash" severity="danger" [label]="getDeleteLabel()" [disabled]="!hasSelectedRows()" />
+      </div>
+      <div class="toolbar-right">
+        @if (things.hasAnyReminders()) {
+          <p-splitButton (onClick)="toggleShowReminders()"
+                        icon="pi pi-clock" [model]="getRemindersForSplitButton()"
+                        [label]="getReminderLabel()"
+                        class="reminder-button" styleClass="p-button-secondary p-button-sm"/>
+        }
+        @if (!things.loading) {
+          <span class="p-input-icon-left">
+            <i class="pi pi-search"></i>
+            <input pInputText type="text" (input)="globalFilterTableByEvent($event)" placeholder="Search Things" />
+          </span>
+        }
+        @if (things.loading) {
+          <p-progressSpinner />
+        }
+      </div>
     </div>
   </div>
-</div>
-</ng-container>
+}
 
-<div [class]="'main-wrap' + (useDial ? '' : ' main-wrap-with-toolbar')" dropzone="true">
+< [class]="'main-wrap' + (useDial ? '' : ' main-wrap-with-toolbar')" dropzone="true">
 
-<div id="reminders" *ngIf="showReminders">
-  <riw-reminder-message *ngFor="let reminder of things.remindersOverdue" [thing]="reminder" [overdue]="true" (onClick)="handleOverdueReminder($event)" />
-  <riw-reminder-message *ngFor="let reminder of things.reminders" [thing]="reminder" (onClick)="requestEditReminder($event)" />
-</div>
+@if (showReminders) {
+  <div id="reminders">
+    @for (reminder of things.remindersOverdue; track reminder.id) {
+      <riw-reminder-message [thing]="reminder" [overdue]="true" (onClick)="handleOverdueReminder($event)" />
+    }
+    @for (reminder of things.reminders; track reminder.id) {
+      <riw-reminder-message [thing]="reminder" (onClick)="requestEditReminder($event)" />
+    }
+  </div>
+}
 
-<p-table #thingTable *ngIf="things.loadedAndHasData()"
+@if (things.loadedAndHasData()) {
+<p-table #thingTable
          [value]="things.data" [loading]="things.loading"
          class="thing-table" styleClass="p-datatable-striped"
          selectionMode="multiple" [(selection)]="selectedRows"
@@ -66,7 +80,9 @@
         <p-sortIcon field="updated" class="updated-col-sort"/>
       </th>
       <th pSortableColumn="name" class="name-col">
-        <span class="pi pi-refresh header-refresh" (click)="things.getAllThings()" pTooltip="Refresh" *ngIf="useDial">&nbsp;</span>
+        @if (useDial) {
+          <span class="pi pi-refresh header-refresh" (click)="things.getAllThings()" pTooltip="Refresh">&nbsp;</span>
+        }
         {{ getNameColumnHeader() }} <p-sortIcon field="name" />
       </th>
       <th pSortableColumn="templateType" class="type-col">Type <p-sortIcon field="templateType" /></th>
@@ -79,14 +95,20 @@
         <span (click)="clearSelectedRows()" [style.cursor]="'pointer'"
               pTooltip="Click to deselect all" tooltipPosition="bottom">
           {{ rowSelectedCount() }} Sel<span class="hide-on-mobile">ected Rows</span>
-          <span class="pi pi-ban header-tiny-button header-tiny-button-color header-clear-rows-button" *ngIf="hasSelectedRows()"></span>
+          @if (hasSelectedRows()) {
+            <span class="pi pi-ban header-tiny-button header-tiny-button-color header-clear-rows-button"></span>
+          }
         </span>
         &nbsp;
-        <span class="pi pi-filter header-tiny-button header-tiny-button-color" (click)="toggleShowFilters()" pTooltip="Show Filters" *ngIf="!showFilters"></span>
-        <span class="pi pi-filter-slash header-tiny-button header-tiny-button-color" (click)="toggleShowFilters()" pTooltip="Hide Filters" *ngIf="showFilters"></span>
+        @if (!showFilters) {
+          <span class="pi pi-filter header-tiny-button header-tiny-button-color" (click)="toggleShowFilters()" pTooltip="Show Filters"></span>
+        }
+        @else {
+          <span class="pi pi-filter-slash header-tiny-button header-tiny-button-color" (click)="toggleShowFilters()" pTooltip="Hide Filters"></span>
+        }
       </th>
     </tr>
-    <ng-container *ngIf="showFilters">
+    @if (showFilters) {
       <tr>
         <th colspan="2"><p-columnFilter type="text" field="name" matchMode="contains" /></th>
         <th><p-columnFilter type="text" field="templateType" matchMode="contains" /></th>
@@ -96,7 +118,7 @@
           <input pInputText type="text" (change)="filterFields($event)" class="header-filter-field" />
         </th>
       </tr>
-    </ng-container>
+    }
   </ng-template>
   <ng-template pTemplate="body" let-data let-rowIndex="rowIndex">
     <tr [pSelectableRow]="data" [pSelectableRowIndex]="rowIndex">
@@ -105,7 +127,9 @@
       </td>
       <td>
         <span [style]="'color:' + data.color">
-          <span *ngIf="isFavoriteByName(data.name)" class="pi pi-heart-fill" style="font-size: 0.75rem"></span>
+          @if (isFavoriteByName(data.name)) {
+            <span class="pi pi-heart-fill" style="font-size: 0.75rem"></span>
+          }
           {{ data.name }}
         </span>
       </td>
@@ -114,7 +138,9 @@
       </td>
       <td class="center">
         <span [style]="'color:' + data.color">
-          <span class="pi pi-clock" *ngIf="data.hasFutureReminder() || things.isOverdueReminder(data)" pTooltip="Thing is a Reminder"></span> {{ data.time | date: 'MMM dd &rsquo;yy \'at\' hh:mm a' }}
+          @if (data.hasFutureReminder() || things.isOverdueReminder(data)) {
+            <span class="pi pi-clock" pTooltip="Thing is a Reminder"></span> {{ data.time | date: 'MMM dd &rsquo;yy \'at\' hh:mm a' }}
+          }
         </span>
       </td>
       <td colspan="2">
@@ -122,29 +148,34 @@
       </td>
     </tr>
   </ng-template>
-  <ng-template *ngIf="!things.loading" pTemplate="emptymessage" let-columns>
-    <tr>
-      <td colspan="6" [class]="getEmptyMessageClass()">
-        No data matches your search
-      </td>
-    </tr>
-  </ng-template>
+  @if (!things.loading) {
+    <ng-template pTemplate="emptymessage" let-columns>
+      <tr>
+        <td colspan="6" [class]="getEmptyMessageClass()">
+          No data matches your search
+        </td>
+      </tr>
+    </ng-template>
+  }
 </p-table>
+}
 
-<div *ngIf="!things.loadedAndHasData()" class="no-things-wrap">
-  <div *ngIf="!things.loading">
-    <p>Welcome to <b>Remember It Wholesale</b>&nbsp;<a href="https://en.wikipedia.org/wiki/We_Can_Remember_It_for_You_Wholesale" target="_blank"><span class="pi pi-external-link"></span></a></p>
-    <div class="small">
-      <p>The purpose of this app is to turn your life into usable data, in any arbitrary form you want.</p>
-      <p>You can store Things of milestones, reminders, goals, events, memories, and more.</p>
-    </div>
-    <hr/>
-    <p>Add something to get started</p>
-    <ng-container *ngIf="useDial">
-      <p-button (onClick)="manageThing.showAdd()" icon="pi pi-plus-circle" label="New Thing" />
-    </ng-container>
+@if (!things.loadedAndHasData()) {
+  <div class="no-things-wrap">
+    @if (!things.loading) {
+      <p>Welcome to <b>Remember It Wholesale</b>&nbsp;<a href="https://en.wikipedia.org/wiki/We_Can_Remember_It_for_You_Wholesale" target="_blank"><span class="pi pi-external-link"></span></a></p>
+      <div class="small">
+        <p>The purpose of this app is to turn your life into usable data, in any arbitrary form you want.</p>
+        <p>You can store Things of milestones, reminders, goals, events, memories, and more.</p>
+      </div>
+      <hr/>
+      <p>Add something to get started</p>
+      @if (useDial) {
+        <p-button (onClick)="manageThing.showAdd()" icon="pi pi-plus-circle" label="New Thing" />
+      }
+    }
   </div>
-</div>
+}
 
 </div>
 
@@ -156,55 +187,58 @@
 
 <p-confirmPopup key="inline" />
 <p-confirmDialog key="dialog"/>
-<p-confirmDialog #favoriteConfirmDialog key="favorite" class="favorite-dialog"
-                 *ngIf="templateService.favorite && templateService.hasFavorite()">
-  <ng-template pTemplate="header">
-    <span class="p-dialog-title" [style.color]="templateService.favorite.color">Favorite - {{templateService.favorite.name}}</span>
-  </ng-template>
-  <ng-template pTemplate="message">
-    <!-- TODO - Need to componentize the custom field rendering and not repeat it both here and in Manage Thing dialog. Note styling needs to come over too (ie: radio buttons are different) -->
-    <div *ngFor="let field of templateService.favorite.fields" class="favorite-section">
-      <label [htmlFor]="field.property">{{ field.getLabel() }}</label>
-      <ng-container *ngIf="field.type === fieldTypes.Text || field.type === fieldTypes.Number">
-        <input [id]="field.property" pInputText [type]="field.type" [required]="field.required || false" [(ngModel)]="field.value"
-               (keyup.enter)="templateService.favorite.hasOneField() && favoriteConfirmDialog.accept()"/>
-      </ng-container>
-      <ng-container *ngIf="field.type === fieldTypes.Textarea">
-        <textarea [id]="field.property" rows="3" pInputTextarea [(ngModel)]="field.value" [required]="field.required || false"></textarea>
-      </ng-container>
-      <ng-container *ngIf="field.type === fieldTypes.Radio">
-        <div [id]="field.property">
-          <ng-container *ngFor="let option of field.options; index as i">
-            <p-radioButton [value]="option" [(ngModel)]="field.value" [inputId]="'option' + i" [required]="field.required || false"
-                           (ngModelChange)="templateService.favorite.hasOneField() && favoriteConfirmDialog.accept()" />
-            <label [for]="'option' + i"> {{option}}</label>
-          </ng-container>
+@if (templateService.favorite && templateService.hasFavorite()) {
+  <p-confirmDialog #favoriteConfirmDialog key="favorite" class="favorite-dialog">
+    <ng-template pTemplate="header">
+      <span class="p-dialog-title" [style.color]="templateService.favorite.color">Favorite - {{templateService.favorite.name}}</span>
+    </ng-template>
+    <ng-template pTemplate="message">
+      <!-- TODO - Need to componentize the custom field rendering and not repeat it both here and in Manage Thing dialog. Note styling needs to come over too (ie: radio buttons are different) -->
+      @for (field of templateService.favorite.fields; track field.property) {
+        <div class="favorite-section">
+          <label [htmlFor]="field.property">{{ field.getLabel() }}</label>
+          @if (field.type === fieldTypes.Text || field.type === fieldTypes.Number) {
+            <input [id]="field.property" pInputText [type]="field.type" [required]="field.required || false" [(ngModel)]="field.value"
+                  (keyup.enter)="templateService.favorite.hasOneField() && favoriteConfirmDialog.accept()"/>
+          }
+          @else if (field.type === fieldTypes.Textarea) {
+            <textarea [id]="field.property" rows="3" pInputTextarea [(ngModel)]="field.value" [required]="field.required || false"></textarea>
+          }
+          @else if (field.type === fieldTypes.Radio) {
+            <div [id]="field.property">
+              @for (option of field.options; track $index) {
+                <p-radioButton [value]="option" [(ngModel)]="field.value" [inputId]="'option' + $index" [required]="field.required || false"
+                              (ngModelChange)="templateService.favorite.hasOneField() && favoriteConfirmDialog.accept()" />
+                <label [for]="'option' + $index"> {{option}}</label>
+              }
+            </div>
+          }
+          @else if (field.type === fieldTypes.Boolean) {
+            <p-triStateCheckbox [id]="field.property" [(ngModel)]="field.value" [required]="field.required || false" />
+          }
+          @else if (field.type === fieldTypes.Dropdown) {
+            <p-dropdown [id]="field.property" [(ngModel)]="field.value"
+                        [options]="field.options"
+                        [required]="field.required || false"
+                        (ngModelChange)="(field.value && templateService.favorite.hasOneField()) && favoriteConfirmDialog.accept()"
+                        class="consistent-field" appendTo="body"/>
+          }
+          @else if (field.type === fieldTypes.Date || field.type === fieldTypes.Datetime) {
+            <p-calendar [id]="field.property" [(ngModel)]="field.value" dataType="string"
+                        (ngModelChange)="templateService.favorite.hasOneField() && favoriteConfirmDialog.accept()"
+                        [required]="field.required || false"
+                        [showTime]="field.type === fieldTypes.Datetime" [showIcon]="true"
+                        hourFormat="12" [stepMinute]="5"
+                        [hideOnDateTimeSelect]="field.type === fieldTypes.Date"
+                        [tabindex]="-1"
+                        class="consistent-field" appendTo="body" ></p-calendar>
+          }
         </div>
-      </ng-container>
-      <ng-container *ngIf="field.type === fieldTypes.Boolean">
-        <p-triStateCheckbox [id]="field.property" [(ngModel)]="field.value" [required]="field.required || false" />
-      </ng-container>
-      <ng-container *ngIf="field.type === fieldTypes.Dropdown">
-        <p-dropdown [id]="field.property" [(ngModel)]="field.value"
-                    [options]="field.options"
-                    [required]="field.required || false"
-                    (ngModelChange)="(field.value && templateService.favorite.hasOneField()) && favoriteConfirmDialog.accept()"
-                    class="consistent-field" appendTo="body"/>
-      </ng-container>
-      <ng-container *ngIf="field.type === fieldTypes.Date || field.type === fieldTypes.Datetime">
-        <p-calendar [id]="field.property" [(ngModel)]="field.value" dataType="string"
-                    (ngModelChange)="templateService.favorite.hasOneField() && favoriteConfirmDialog.accept()"
-                    [required]="field.required || false"
-                    [showTime]="field.type === fieldTypes.Datetime" [showIcon]="true"
-                    hourFormat="12" [stepMinute]="5"
-                    [hideOnDateTimeSelect]="field.type === fieldTypes.Date"
-                    [tabindex]="-1"
-                    class="consistent-field" appendTo="body" ></p-calendar>
-      </ng-container>
-    </div>
-  </ng-template>
-  <ng-template pTemplate="footer">
-    <p-button (onClick)="favoriteConfirmDialog.reject()" label="Cancel" icon="pi pi-times" iconPos="left" severity="secondary"/>
-    <p-button (onClick)="favoriteConfirmDialog.accept()" label="Save" icon="pi pi-check" iconPos="left"/>
-  </ng-template>
-</p-confirmDialog>
+    }
+    </ng-template>
+    <ng-template pTemplate="footer">
+      <p-button (onClick)="favoriteConfirmDialog.reject()" label="Cancel" icon="pi pi-times" iconPos="left" severity="secondary"/>
+      <p-button (onClick)="favoriteConfirmDialog.accept()" label="Save" icon="pi pi-check" iconPos="left"/>
+    </ng-template>
+  </p-confirmDialog>
+}
