--- a/src/app/manage-thing-dialog/manage-thing-dialog.component.html
+++ b/src/app/manage-thing-dialog/manage-thing-dialog.component.html
@@ -1,4 +1,5 @@
-<p-dialog [header]="(isAdd() ? 'Add New' : 'Edit') + ' Thing'" [(visible)]="isShowing" [modal]="true" [maximizable]="true" class="manage-thing-dialog">
+<p-dialog [header]="(isAdd() ? 'Add New' : 'Edit') + ' Thing'" [(visible)]="isShowing" [modal]="true" [maximizable]="true" class="manage-thing-dialog"
+          (onShow)="handleFocus(nameField)">
   <div class="content-form">
 
     <table cellpadding="10">
@@ -7,7 +8,8 @@
           Template
         </td>
         <td colspan="2">
-          <riw-template-dropdown [(selectedTemplate)]="selectedTemplate" [keepValue]="isEdit()"
+          <riw-template-dropdown #templateDropdown
+                                 [(selectedTemplate)]="selectedTemplate" [keepValue]="isEdit()"
                                  (manageTemplateEvent)="handleTemplateEvent($event)"
                                  (selectedTemplateChange)="templateChanged($event)"/>
         </td>
@@ -34,18 +36,18 @@
         </td>
         <td>
           <!-- TODO Should make this less repetitive (with the wrapped version below), either with a component or better styling -->
-          <ng-container *ngIf="!shouldWrapReminder()">
+          @if (!shouldWrapReminder()) {
             <p-checkbox [(ngModel)]="actOn.reminder" (onChange)="reminderCheckboxChanged()"
                         [binary]="true" label="Reminder?"
                         pTooltip="Click to make this Thing a reminder that will display time left and notify you when due" />
-          </ng-container>
-          <ng-container *ngIf="shouldWrapReminder()">
+          }
+          @else {
             <!-- TODO This is a hack to ensure the Add/Delete template circle buttons above don't wrap -->
             <div style="width: 80px;">&nbsp;</div>
-          </ng-container>
+          }
         </td>
       </tr>
-      <ng-container *ngIf="shouldWrapReminder()">
+      @if (shouldWrapReminder()) {
         <tr>
           <td colspan="3">
             <p-checkbox [(ngModel)]="actOn.reminder" (onChange)="reminderCheckboxChanged()"
@@ -53,53 +55,57 @@
                         pTooltip="Click to make this Thing a reminder that will display time left and notify you when due" />
           </td>
         </tr>
-      </ng-container>
-      <tr *ngFor="let field of selectedTemplate?.fields">
-        <td>
-          <label [htmlFor]="field.property">{{ field.getLabel() }}</label>
-        </td>
-        <td colspan="2">
-          <!-- TODO Do we need any other field types for Things? Photos? Slider? -->
-          <ng-container *ngIf="field.type === fieldTypes.Text || field.type === fieldTypes.Number">
-            <input [id]="field.property" pInputText [type]="field.type" [required]="field.required || false" [(ngModel)]="field.value"/>
-          </ng-container>
-          <ng-container *ngIf="field.type === fieldTypes.Textarea">
-            <textarea [id]="field.property" rows="3" pInputTextarea [(ngModel)]="field.value" [required]="field.required || false"></textarea>
-          </ng-container>
-          <ng-container *ngIf="field.type === fieldTypes.Radio">
-            <div [id]="field.property">
-              <ng-container *ngFor="let option of field.options; index as i">
-                <p-radioButton [value]="option" [(ngModel)]="field.value" [inputId]="'option' + i" [required]="field.required || false" />
-                <label [for]="'option' + i"> {{option}}</label>
-              </ng-container>
-            </div>
-          </ng-container>
-          <ng-container *ngIf="field.type === fieldTypes.Boolean">
-            <p-triStateCheckbox [id]="field.property" [(ngModel)]="field.value" [required]="field.required || false" />
-          </ng-container>
-          <ng-container *ngIf="field.type === fieldTypes.Dropdown">
-            <p-dropdown [id]="field.property" [(ngModel)]="field.value"
-                        [options]="field.options"
-                        [required]="field.required || false"
-                        class="consistent-field" appendTo="body"/>
-          </ng-container>
-          <ng-container *ngIf="field.type === fieldTypes.Date || field.type === fieldTypes.Datetime">
-            <p-calendar [id]="field.property" [(ngModel)]="field.value" dataType="string"
-                        [required]="field.required || false"
-                        [showTime]="field.type === fieldTypes.Datetime" [showIcon]="true"
-                        hourFormat="12" [stepMinute]="5"
-                        [hideOnDateTimeSelect]="field.type === fieldTypes.Date"
-                        [tabindex]="-1"
-                        class="consistent-field" appendTo="body" ></p-calendar>
-          </ng-container>
-        </td>
-      </tr>
+      }
+      @for (field of selectedTemplate?.fields; track field.property) {
+        <tr>
+          <td>
+            <label [htmlFor]="field.property">{{ field.getLabel() }}</label>
+          </td>
+          <td colspan="2">
+            <!-- TODO Do we need any other field types for Things? Photos? Slider? -->
+            @if (field.type === fieldTypes.Text || field.type === fieldTypes.Number) {
+              <input [id]="field.property" pInputText [type]="field.type" [required]="field.required || false" [(ngModel)]="field.value"/>
+            }
+            @else if (field.type === fieldTypes.Textarea) {
+              <textarea [id]="field.property" rows="3" pInputTextarea [(ngModel)]="field.value" [required]="field.required || false"></textarea>
+            }
+            @else if (field.type === fieldTypes.Radio) {
+              <div [id]="field.property">
+                @for (option of field.options; track $index) {
+                  <p-radioButton [value]="option" [(ngModel)]="field.value" [inputId]="'option' + $index" [required]="field.required || false" />
+                  <label [for]="'option' + $index"> {{option}}</label>
+                }
+              </div>
+            }
+            @else if (field.type === fieldTypes.Boolean) {
+              <p-triStateCheckbox [id]="field.property" [(ngModel)]="field.value" [required]="field.required || false" />
+            }
+            @else if (field.type === fieldTypes.Dropdown) {
+              <p-dropdown [id]="field.property" [(ngModel)]="field.value"
+                          [options]="field.options"
+                          [required]="field.required || false"
+                          class="consistent-field" appendTo="body"/>
+            }
+            @else if (field.type === fieldTypes.Date || field.type === fieldTypes.Datetime) {
+              <p-calendar [id]="field.property" [(ngModel)]="field.value" dataType="string"
+                          [required]="field.required || false"
+                          [showTime]="field.type === fieldTypes.Datetime" [showIcon]="true"
+                          hourFormat="12" [stepMinute]="5"
+                          [hideOnDateTimeSelect]="field.type === fieldTypes.Date"
+                          [tabindex]="-1"
+                          class="consistent-field" appendTo="body" ></p-calendar>
+            }
+          </td>
+        </tr>
+      }
     </table>
   </div>
   
   <ng-template pTemplate="footer">
-    <p-button (onClick)="handleDeleteThing($event)" *ngIf="isEdit()"
-              icon="pi pi-trash"  [rounded]="true" severity="danger" pTooltip="Delete this Thing" class="fleft"/>
+    @if (isEdit()) {
+      <p-button (onClick)="handleDeleteThing($event)"
+                icon="pi pi-trash"  [rounded]="true" severity="danger" pTooltip="Delete this Thing" class="fleft"/>
+    }
     <p-button (onClick)="hide()" label="Cancel" icon="pi pi-times" iconPos="left" severity="secondary"/>
     <p-button (onClick)="submit()" label="Save Thing" icon="pi pi-check" iconPos="left"/>
     <p-confirmPopup />
