--- a/src/styles.css
+++ b/src/styles.css
@@ -34,6 +34,10 @@ html {
   float: left;
 }
 
+.fright {
+  float: right;
+}
+
 .checkbox-label-on-left {
   flex-direction: row-reverse;
 }
@@ -65,4 +69,8 @@ html {
 
 .updated-col-sort svg {
   margin-left: 0;
+}
+
+#limitDate {
+  max-width: var(--standard-field-width);
 }
