--- a/src/app/global-search-dialog/global-search-dialog.component.html
+++ b/src/app/global-search-dialog/global-search-dialog.component.html
@@ -1,7 +1,7 @@
 <p-dialog header="Global Search" [(visible)]="isShowing" [modal]="false" class="global-search-dialog"
           (onShow)="handleFocus(searchField)" (onHide)="resetOnHide()">
   @if (isShowing && resultCount !== null) {
-    <div class="center result-text">{{resultCount}} records</div>
+    <div class="center result-text">{{resultCount | number}} records</div>
   }
   <input id="search" #searchField pInputText [(ngModel)]="searchText" (keyup.enter)="performSearch()" placeholder="Enter your keywords"/>
   <ng-template pTemplate="footer">
