--- a/src/assets/css/primeng-override.css
+++ b/src/assets/css/primeng-override.css
@@ -100,6 +100,12 @@ p-columnfilterformelement .p-inputtext {
   width: var(--standard-field-width);
 }
 
+/* Center our fieldset legend headers */
+.p-fieldset-legend {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 @media (max-width: 850px) { /* var(--mobile-breakpoint) equivalent, just can't use in media queries */
   .hide-on-mobile {
     display: none;
