--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -7,13 +7,54 @@
   padding-top: 40px;
   margin-left: auto;
   margin-right: auto;
-  min-width: 600px;
+  min-width: 650px;
   max-width: 50vw;
+}
+
+.fieldset-inner {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.field-wrap {
+  display: block;
+  flex-grow: 1;
+  flex-shrink: 1;
+}
+
+.field-wrap input {
+  width: 100%;
+}
+
+.terminal-image-wrap {
+  cursor: pointer;
+  display: block;
+  flex-grow: 0;
+  flex-shrink: 1;
+  justify-content: center;
+  align-items: center;
+  padding-right: 20px;
+  padding-left: 20px;
+  height: 75px;
+}
+
+.terminal-image {
+  width: 70px;
+  aspect-ratio: 1;
+}
+
+.terminal-image:active {
+  transform: rotate(360deg);
+  filter: saturate(4);
+  transition: 2s;
 }
 
 @media (max-width: 850px) {  /* var(--mobile-breakpoint) equivalent, just can't use in media queries */
   .login-wrap {
-    margin-top: 0;
+    margin-top: 10px;
     padding: 5px;
   }
   
@@ -21,5 +62,14 @@
     padding-top: 20px;
     min-width: auto;
     max-width: 100vw;
+  }
+  
+  .fieldset-inner {
+    flex-direction: column;
+  }
+  
+  .terminal-image-wrap {
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
 }
